Create streaming handler factory, address comments
Signed-off-by: Nathalie Jonathan <nathhjo@amazon.com>